app/assets/stylesheets/components/_account.scss
.account-left-panel {
    > div.grid-block {
        border-right: 1px solid $border-color;
    }
    .account-buttons-row .button {
        min-width: 4.5rem;
    }
    .bottom {
        border-top: 1px solid transparent;
        padding: 0.5rem;
        > .center {
            width: auto;
            margin: 0 auto;
        }
    }

    span.button {
        font-size: 1.1rem;
        padding-top: 0.75rem;
        padding-bottom: 0.75rem;
    }

    a.pay-button {
        font-weight: bold;
        letter-spacing: 2px;
        font-size: 1.1rem;
        border: 0;
        padding-top: 0.7rem;
        padding-bottom: 0.7rem;
    }
}

@keyframes flash {
    from,
    50%,
    to {
        opacity: 1;
    }

    25%,
    75% {
        opacity: 0;
    }
}

.proposals {
    .proposal {
        padding-top: 0;
        text-align: left !important;
    }
    .proposal.first {
        padding-top: 2rem;
    }
    > thead {
        > tr {
            > th {
                text-align: left !important;
            }
        }
    }
    .top-left-align {
        > td {
            text-align: left !important;
            vertical-align: top !important;
        }
    }
    hr {
        margin-top: 0.3rem;
        margin-bottom: 0.5rem;
        margin-right: 24px;
    }
    .list-item {
        padding-bottom: 5px;
        padding-top: 5px;
    }
    .approval-buttons {
        padding-top: 0;
        .button {
            margin-right: 2rem;
        }
        .button.hidden {
            opacity: 0;
            cursor: default;
        }
    }
    .scam-error {
        margin-right: 1rem;
        display: inline-block;
    }
}

.nested-approval-state {
    .icon {
        display: inline-block;
        margin-right: 0.5rem;
        margin-top: 0.1rem;
        margin-bottom: 0.1rem;
    }
    .root-status {
        padding-top: 5px;
        margin-bottom: 0.5rem;
    }
    .expand-button {
        display: inline-block;
        padding-left: 0.5rem;
    }
    .table-container {
        border-left: 2px dashed #777;
        padding-bottom: 0.4rem;
        table {
            margin-left: 1rem;
            margin-top: 0.4rem;
        }
    }
    .appended {
        display: inline-block;
        padding-left: 0.5rem;
    }
    table {
        text-align: left;
        > tbody {
            > tr {
                > td {
                    padding-right: 0.5rem;
                    vertical-align: middle;
                    > * {
                        vertical-align: middle;
                    }
                }
            }
        }
    }
    .spacer {
        height: 0.5rem;
    }
    .heading-perm {
        font-size: 14px;
    }
}

.flash {
    animation-name: flash;
}

.account-info {
    text-align: center;
    .account-title {
        transition: opacity 0.25s linear, transform 0.25s linear,
            color 0.25s linear;
        margin-bottom: 0;
        font-weight: 600;
        &.flash {
            opacity: 0.35;
            transform: scale(1.1);
        }
    }
    > p:first-of-type {
        font-size: 85%;
        line-height: 1.2;
    }

    .account-image {
        padding-bottom: 1rem;
        > canvas {
            padding: 1rem;
            border: 1px solid $border-color;
        }
    }
    > div.secondary {
        padding-bottom: 1rem;
        position: relative;

        > span:first-of-type {
            font-weight: bold;
        }

        > span.my-account-label {
            top: 4px;
            font-size: 0.8rem;
            position: absolute;
            right: 0;
            text-transform: uppercase;
            font-variant: small-caps;
        }
    }
}

.account-left-menu {
    > li {
        &.menu-subheader {
            text-transform: uppercase;
            font-size: 0.875rem;
            padding: 1.5rem 0.5rem 0.25rem 0.5rem;
            text-align: center;
            border-bottom: none !important;

            > span {
                display: inline-block;
                color: inherit;
                cursor: pointer;
            }
        }

        > a {
            padding-left: 1.75rem !important;
            border-right: 3px solid transparent;
        }
    }
}

// .no-amount {
//     padding-right: 1rem;
//     padding-left: 0.7rem;
//     font-size: 0.9rem;
//     font-weight: bold;
// }

.weight-input {
    display: table-cell;
    margin: 0 1rem !important;
    width: 30% !important;
}

.threshold input {
    width: 5rem !important;
}

.more-button {
    padding-top: 0.5rem;
}

.create-account-header {
    height: 180px;
}

a.action-button > span {
    text-transform: lowercase;
}

div.header-selector {
    > .filter {
        margin-right: 1rem;
        input {
            margin: 0;
            height: 2rem;
            padding: 0 10px;
        }
    }
    > .selector div {
        font-size: 1rem;
        margin-bottom: 0.5rem;
        cursor: pointer;
        &:nth-of-type(n + 1) {
            padding-left: 10px;
            padding-right: 10px;
            border-right: 1px solid white; // TODO: FIX
        }
        &:hover.inactive {
            color: inherit;
        }
    }
    > .selector div:last-of-type {
        border-right: 0px;
    }
    > .group-by {
        float: right;
        line-height: 32px;

        .text {
            margin-right: 10px;
        }
    }
}

div.account-tabs {
    .padding {
        padding: 20px;
    }

    > div.service-selector {
        margin-bottom: 0;
        border: none;
        overflow-x: hidden;
    }

    div.header-selector {
        padding: 1rem;
    }

    &.with-buttons ul.account-overview > li:not(.total-value) > a {
        padding-left: 3px;
        padding-right: 3px;
    }

    ul.account-overview > li.total-value {
        input {
            min-width: 13rem;
        }
        > a {
            span.tab-title {
                text-transform: uppercase;
                font-variant: small-caps;
                font-size: 0.8rem;
            }
            div.tab-subtext {
                font-size: 0.8rem;
                text-align: right;
            }
        }
    }

    ul > li.tabs-action-buttons {
        margin: 5px auto;
    }
}
ul.account-overview {
    display: table;
    li {
        display: table-cell;
        vertical-align: middle;
        > a {
            font-size: 1.1rem;

            > div.tab-subtext {
                font-size: 70%;
                text-align: right;
            }
        }
        &.total-value {
            > a {
                cursor: default;
                > span.tab-title {
                    font-size: 95%;
                }
            }
        }
    }
}

table.table.dashboard-table {
    > thead > tr > th:first-of-type,
    > tbody > tr > td:first-of-type {
        padding-left: 1.5rem;
    }
    > thead > tr > th:last-of-type,
    > tbody > tr > td:last-of-type {
        padding-right: 1.5rem;
    }
    > thead > tr > th {
        @include RobotoMedium;
        font-size: 0.875rem;
        text-align: center;
        border: none;
    }
    > tbody > tr {
        > td {
            font-size: 0.875rem;
            text-align: center;
            border: none;

            &.worker-name {
                max-width: 15rem;
                overflow-x: hidden;
                white-space: nowrap;
                text-overflow: ellipsis;
                > div span.icon > svg {
                    width: 1.75rem;
                    height: 1.75rem;
                }
                > div > a {
                    font-size: 90%;
                }
            }

            &.worker-id {
                width: 3rem;
                max-width: 5rem;
            }
        }
        &.total-value {
            td {
                vertical-align: middle;
                padding-top: 8px;
                padding-bottom: 8px;
                border-bottom: none;
                word-wrap: none;
            }
            td:first-of-type {
                text-align: left;
                text-transform: uppercase;
                @include RobotoMedium;
            }
            td:nth-child(3) {
                @include RobotoMedium;
                text-align: right;
            }
        }
    }
}

.grid-wrapper {
    margin-bottom: 20px;
}

.groupColumn {
    // !important used to override theme styles
    padding-left: 2px !important;
    padding-right: 2px !important;

    // "Fit to content" hack: https://stackoverflow.com/questions/11267154/fit-cell-width-to-content
    width: 1%;
    white-space: nowrap;
}

.ant-table-content .ant-table-footer .total-value {
    text-align: right;

    .text {
        margin-right: 20px;
        text-transform: uppercase;
        @include RobotoMedium;
    }
}

div.header-selector > div.new-worker-button {
    padding-left: 0;
    padding-top: 10px;

    @include breakpoint(medium) {
        padding-top: 0;
        position: relative;
        top: -20px;
        float: right;
        clear: both;
    }
}

.shuffle-rev {
    > a span.icon > svg {
        -moz-transform: scaleX(-1);
        -o-transform: scaleX(-1);
        -webkit-transform: scaleX(-1);
        transform: scaleX(-1);
        filter: FlipH;
        -ms-filter: "FlipH";
    }
}

.trading-pair {
    > a span.icon > svg {
        margin-left: 10px;
        margin-right: 10px;
    }
}

div.tabs-container {
    > div {
        padding: 0px;
    }

    div.permissions-buttons > button {
        margin: 0rem;
        margin-left: 1rem;
        font-size: 1.2em;
    }

    div.permissions-buttons {
        margin: 0 1rem;
    }

    div.help-content {
        max-width: 800px;
    }

    div.tabs-header > h1,
    div.tabs-header > h2,
    div.tabs-header > h3,
    div.tabs-header > h4,
    div.tabs-header > h5 {
        margin: 10px 15px;
    }

    td .button span {
        white-space: nowrap;
    }

    .action-buttons {
        text-align: right;

        button {
            min-width: 5rem;
            margin-left: 0.5rem;
        }
    }
}

.account-treemap {
    padding: 10px;
    text {
        @include RobotoRegular;
    }
}

.account-treemap--legend {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    .legend-item {
        display: flex;
        margin-right: 10px;
        margin-bottom: 10px;
        .legend-square {
            height: 16px;
            width: 16px;
            margin-right: 5px;
        }
    }
}

.account-input-style-guide--account-status {
    float: right;
    color: $success-color;
}

.account-input-style-guide--account-status--scammer {
    color: $alert-color;
}

.account-input-style-guide--label {
}

.account-input-style-guide {
}

.recent-transactions {
    .iconLinkAndLabel {
        span {
            font-weight: bold;
            margin-left: 0.5rem;
            text-transform: uppercase;
        }
    }
}

